--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.GH_PAT }}
+          fetch-depth: 0   # ensure full git history for diff
 
       # 2️⃣ Set Git identity for committing
       - name: Set Git identity
@@ -30,7 +31,7 @@ jobs:
       # 4️⃣ Install dependencies
       - name: Install dependencies
         run: |
-          pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install openai gitpython requests
 
       # 5️⃣ Run the auto-update Python script
