--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -1,4 +1,4 @@
-name: Auto Update Code for Issues
+\name: Auto Update Code for Issues
 
 on:
   issues:
@@ -14,7 +14,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.GH_PAT }}
-          fetch-depth: 0   # ensure full git history for diff
 
       # 2️⃣ Set Git identity for committing
       - name: Set Git identity
@@ -31,7 +30,7 @@ jobs:
       # 4️⃣ Install dependencies
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          pip install --upgrade pip
           pip install openai gitpython requests
 
       # 5️⃣ Run the auto-update Python script
