--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.GH_PAT }}
-          fetch-depth: 0   # ensure full git history for branch creation and PRs
+          fetch-depth: 0   # full git history for branch creation and PRs
 
       # 2️⃣ Set Git identity for committing
       - name: Set Git identity
