--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -9,26 +9,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Checkout repo
       - name: Checkout repo
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.GH_PAT }}
 
+      # 2️⃣ Set Git identity
       - name: Set Git identity
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
+      # 3️⃣ Setup Python
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
+      # 4️⃣ Install dependencies (added langchain)
       - name: Install dependencies
         run: |
           pip install --upgrade pip
-          pip install openai gitpython requests
+          pip install openai gitpython requests langchain
 
+      # 5️⃣ Run auto-update script
       - name: Run auto-update script
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
