--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -4,13 +4,17 @@ on:
   issues:
     types: [opened]
 
+permissions:
+  contents: write        # Required to push commits
+  pull-requests: write   # Required to create PRs
+
 jobs:
   auto_update:
     runs-on: ubuntu-latest
 
     steps:
       # 1️⃣ Checkout repo
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.GH_PAT }}
@@ -27,10 +31,10 @@ jobs:
         with:
           python-version: '3.11'
 
-      # 4️⃣ Install dependencies (✅ includes langchain-openai)
-      - name: Install dependencies
+      # 4️⃣ Install dependencies
+      - name: Install Python dependencies
         run: |
-          pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install openai gitpython requests langchain langchain-openai
 
       # 5️⃣ Run auto-update script
@@ -41,4 +45,6 @@ jobs:
           ISSUE_TITLE: ${{ github.event.issue.title }}
           ISSUE_BODY: ${{ github.event.issue.body }}
           GITHUB_REPOSITORY: ${{ github.repository }}
-        run: python scripts/auto_update.py
+        run: |
+          python scripts/auto_update.py
+        shell: bash
