--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -4,16 +4,12 @@ on:
   issues:
     types: [opened]
 
-permissions:
-  contents: write        # Required to push commits
-  pull-requests: write   # Required to create PRs
-
 jobs:
   auto_update:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repository
+      # 1️⃣ Checkout repo
       - name: Checkout repo
         uses: actions/checkout@v3
         with:
@@ -31,10 +27,10 @@ jobs:
         with:
           python-version: '3.11'
 
-      # 4️⃣ Install dependencies
-      - name: Install Python dependencies
+      # 4️⃣ Install dependencies (✅ includes langchain-openai)
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          pip install --upgrade pip
           pip install openai gitpython requests langchain langchain-openai
 
       # 5️⃣ Run auto-update script
@@ -46,4 +42,3 @@ jobs:
           ISSUE_BODY: ${{ github.event.issue.body }}
           GITHUB_REPOSITORY: ${{ github.repository }}
         run: python scripts/auto_update.py
-        shell: bash
